--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A node project ",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start:prod":"NODE_ENV=production node server.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Anagha",
   "license": "ISC",
